--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
+    "intro.js": "^3.1.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
