--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,7 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "intro.js": "^3.1.0",
