--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,32 +1,48 @@
 {
-  "name": "saldur",
-  "version": "1.0.0",
-  "description": "empresa distribuidora de lubricantes para motor.",
-  "main": "index.html",
-  "type": "module",
+  "name": "lubricantes-saldur",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ricdasal/Proyecto-DAWM-.git"
-  },
-  "author": "Assemby",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ricdasal/Proyecto-DAWM-/issues"
-  },
-  "homepage": "https://github.com/ricdasal/Proyecto-DAWM-#readme",
-  "devDependencies": {
-    "lite-server": "^2.6.1"
-  },
+  "private": true,
   "dependencies": {
-    "axios": "^0.21.0",
+    "@angular/animations": "~11.0.0",
+    "@angular/common": "~11.0.0",
+    "@angular/compiler": "~11.0.0",
+    "@angular/core": "~11.0.0",
+    "@angular/forms": "~11.0.0",
+    "@angular/platform-browser": "~11.0.0",
+    "@angular/platform-browser-dynamic": "~11.0.0",
+    "@angular/router": "~11.0.0",
+    "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.5.3",
-    "chart.js": "^2.9.4",
-    "intro.js": "^3.1.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular/cli": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.0",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   }
 }
