--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/carousel.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
