--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.15",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
